# FutData

./: pyproject.toml
backend/: main.py
backend/api/: api_client.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
