[project]
name = "futdata"
version = "0.1.0"
description = "A project designed for football fans to go through their teams latest data!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "supabase>=2.28.2",
    "uvicorn>=0.42.0",
]
